# rse_nanodegree

./: .gitignore  README.md
ball_chaser/: CMakeLists.txt  package.xml
ball_chaser/launch/: opencv_test.launch
ball_chaser/src/: drive_bot.cpp  image_converter.cpp  process_image.cpp
build_my_world/model/building/house/: model.sdf
build_my_world/model/desk/: model.sdf
build_my_world/script/: hello.cpp
catkin_ws/: README.md
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/lib/pkgconfig/: simple_arm.pc
catkin_ws/devel/share/roseus/ros/simple_arm/: manifest.l
catkin_ws/devel/share/simple_arm/cmake/: simple_arm-msg-extras.cmake  simple_armConfig.cmake
catkin_ws/src/simple_arm/: CMakeLists.txt
catkin_ws/src/simple_arm/images/: simple_arm_sim
catkin_ws/src/simple_arm/launch/: robot_spawn.launch
catkin_ws/src/simple_arm/src/: simple_mover.cpp
go_chase_it/: README.md
go_chase_it/ball_chaser/: CMakeLists.txt  package.xml
go_chase_it/ball_chaser/src/: drive_bot.cpp  process_image.cpp  select_ball_color.cpp
go_chase_it/my_robot/: package.xml
go_chase_it/my_robot/launch/: world.launch
go_chase_it/my_robot/urdf/: my_robot.xacro
go_chase_it/my_robot/worlds/: myworld.world
home_service_robot/: README.md  links.sh
home_service_robot/add_markers/: CMakeLists.txt  package.xml
home_service_robot/add_markers/src/: add_markers.cpp
home_service_robot/home_service_robot/: CMakeLists.txt  package.xml
home_service_robot/home_service_robot/launch/: amcl.launch  turtlebot.launch  view_navigation.launch
home_service_robot/home_service_robot/rvizConfig/: navigation_markers.rviz
home_service_robot/pick_objects/: CMakeLists.txt  package.xml
home_service_robot/pick_objects/src/: pick_objects.cpp
home_service_robot/scripts/: add_marker.sh  home_service.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
map_my_world/: CMakeLists.txt  package.xml
map_my_world/config/: costmap_common_params.yaml
map_my_world/launch/: amcl.launch  localization.rviz  mapping.launch  robot_description.launch  world.launch
map_my_world/urdf/: my_robot.gazebo  my_robot.xacro
my_robot/: CMakeLists.txt  package.xml
my_robot/launch/: camera_lidar.rviz  robot_description.launch  world.launch
my_robot/urdf/: my_robot.xacro
my_robot/worlds/: myworld2.world
simple_arm/: CMakeLists.txt  README.md
simple_arm/launch/: robot_spawn.launch
simple_arm/src/: arm_mover.cpp  look_away.cpp
where_am_i/: CMakeLists.txt  package.xml
where_am_i/config/: costmap_common_params.yaml
where_am_i/launch/: amcl.launch  robot_description.launch  world.launch
where_am_i/urdf/: my_robot.gazebo  my_robot.xacro
