<?xml version="1.0"?>
<package format="2">
  <name>map_my_world</name>
  <version>0.0.0</version>
  <description>The map_my_world package</description>

  <maintainer email="andrew@todo.todo">andrew</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
