<?xml version="1.0"?>
<package format="2">
  <name>add_markers</name>
  <version>0.0.0</version>
  <description>The add_markers package</description>

  <maintainer email="andrew@todo.todo">andrew</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
